[tool.poetry]
name = "elan-vad"
version = "0.2.0"
description = """\
  A utility library to perform Voice Audio Detection on .wav files, write \
  these sections to an elan file, and optionally cluster annotations on a \
  given tier based on the VAD sections.\
  """
readme = "README.md"
repository = "https://github.com/CoEDL/elan-vad"
authors = ["Harry Keightley <harrykeightley@outlook.com>"]
keywords = ["Elan", "VAD", "Voice", "Audio", "Detection"]

[tool.poetry.dependencies]
python = "^3.9"
pympi-ling = "^1.70.2"
numpy = "^1.23.1"
torch = "^1.12.0"
torchaudio = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[tool.poetry.scripts]
vad = "elan_vad.cli:vad"
cluster = "elan_vad.cli:cluster"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
